; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/megaraid/extr_megaraid_sas_base.c_megasas_isr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/megaraid/extr_megaraid_sas_base.c_megasas_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.megasas_irq_context = type { %struct.megasas_instance* }
%struct.megasas_instance = type { i32, i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@DID_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @megasas_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @megasas_isr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.megasas_irq_context*, align 8
  %7 = alloca %struct.megasas_instance*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.megasas_irq_context*
  store %struct.megasas_irq_context* %11, %struct.megasas_irq_context** %6, align 8
  %12 = load %struct.megasas_irq_context*, %struct.megasas_irq_context** %6, align 8
  %13 = getelementptr inbounds %struct.megasas_irq_context, %struct.megasas_irq_context* %12, i32 0, i32 0
  %14 = load %struct.megasas_instance*, %struct.megasas_instance** %13, align 8
  store %struct.megasas_instance* %14, %struct.megasas_instance** %7, align 8
  %15 = load %struct.megasas_instance*, %struct.megasas_instance** %7, align 8
  %16 = getelementptr inbounds %struct.megasas_instance, %struct.megasas_instance* %15, i32 0, i32 1
  %17 = call i64 @atomic_read(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %20, i32* %3, align 4
  br label %34

21:                                               ; preds = %2
  %22 = load %struct.megasas_instance*, %struct.megasas_instance** %7, align 8
  %23 = getelementptr inbounds %struct.megasas_instance, %struct.megasas_instance* %22, i32 0, i32 0
  %24 = load i64, i64* %8, align 8
  %25 = call i32 @spin_lock_irqsave(i32* %23, i64 %24)
  %26 = load %struct.megasas_instance*, %struct.megasas_instance** %7, align 8
  %27 = load i32, i32* @DID_OK, align 4
  %28 = call i32 @megasas_deplete_reply_queue(%struct.megasas_instance* %26, i32 %27)
  store i32 %28, i32* %9, align 4
  %29 = load %struct.megasas_instance*, %struct.megasas_instance** %7, align 8
  %30 = getelementptr inbounds %struct.megasas_instance, %struct.megasas_instance* %29, i32 0, i32 0
  %31 = load i64, i64* %8, align 8
  %32 = call i32 @spin_unlock_irqrestore(i32* %30, i64 %31)
  %33 = load i32, i32* %9, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %21, %19
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @megasas_deplete_reply_queue(%struct.megasas_instance*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
